# pynvml

./: .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  PKG-INFO  README.md  README.txt  help_query_gpu.txt  nvidia_smi.py  pynvml.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
ci/: Dockerfile  build
docker/: Dockerfile
docs/: nvml_cuda110.h  nvml_cuda91.h
nvidia_smi/: __init__.py  smi.py
nvidia_smi/tests/: test_smi.py
nvml/: __init__.py  nvidia_smi.py  nvml_types.py  pynvml.py
nvml_utils/: smi.py
nvml_utils/tests/: test_smi.py
pynvml/: __init__.py  _version.py  nvml.py  smi.py
pynvml/tests/: conftest.py  test_nvml.py  test_smi.py
pynvml_utils/: __init__.py  _version.py
pynvml_utils/tests/: test_nvml.py
tests/: test_nvml.py  test_pynvml.py
